# RAGHSH

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: .env.example
data/: README.md
src/hsh_scraper/: __init__.py  api_rate_limiter.py  check_quality.py  clean_corpus.py  conversation_memory.py  corpus_quality.py  crawl_helpers.py  delete_qdrant.py  glossary_index.py  hpc_vectorizer.py  hsh_chatbot.py  hsh_web_app.py  hybrid_search.py  local_importer.py  main.py  paths.py  query_assist.py  rag_followup.py  resume_crawler.py  retrieval_planner.py  turn_router.py  url_filter.py  web_app_runtime.py
src/hsh_scraper/evals/: README.md  __init__.py  evidence_validation.py  validation_cases.json  validation_cli.py  validation_system.py
tests/: test_answer_postprocessing.py  test_api_rate_limiter.py  test_evidence_validation.py  test_query_assist_regressions.py  test_validation_cases.py
