[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "raghsh"
version = "0.1.0"
description = "Retrieval-augmented generation tools for Hochschule Hannover knowledge search."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
raghsh-eval = "hsh_scraper.evals.validation_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hsh_scraper.evals" = ["*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
